now distinguishing between name and client number constraint violations

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -49,7 +49,9 @@ AccountingService_errorCannotSendInvoiceWithoutDueDate=Cannot send an invoice wi
 AccountingService_errorCannotSendInvoiceWithDueDateInPast=Due date is in the past ({0}), cannot send this invoice! 
 AccountingService_errorMissingClient=Please select a client for the invoice.
 AccountingService_errorInvoiceNumberExists=An invoice with that number already exists.
-AccountingService_errorClientExists=A client with that name already exists.
+AccountingService_errorClientExists=Client already exists.
+AccountingService_errorClientNameExists=Client with name [{0}] already exists.
+AccountingService_errorClientNumberExists=Client with number [{0}] already exists.
 
 ###############################################################################
 # ModelMapper errors
