--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -58,6 +58,8 @@ AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt
 AccountingService_errorMissingClient=Bitte w\u00E4hlen Sie einen Kunden f\u00FCr die Rechnung aus.
 AccountingService_errorInvoiceNumberExists=Eine Rechnung mit dieser Nummer existiert bereits.
 AccountingService_errorClientExists=Ein Kunde mit diesem Namen existiert bereits.
+AccountingService_errorClientNameExists=Kunde mit Namen [{0}] existiert bereits.
+AccountingService_errorClientNumberExists=Kunde mit Nummer [{0}] existiert bereits.
 
 ###############################################################################
 # ModelMapper errors
