added confirm dialog to overwrite generated report files

--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -239,6 +239,7 @@ ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u0
 ReportGenerationUtil_labelPdfFiles=PDF Dateien
 ReportGenerationUtil_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generierung erfolgreich
+ReportGenerationUtil_confirmOverwriteMsg=Datei [{0}] existiert bereits.\nDr\u00FCcken Sie \"OK\" um sie zu \u00FCberschreiben.
 
 RevenueByYearDialog_details=Details
 RevenueByYearDialog_title=Umsatz nach Jahren
