--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -251,6 +251,7 @@ ReportGenerationUtil_errorNoReportingService=Reporting service not found, please
 ReportGenerationUtil_labelPdfFiles=PDF files
 ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generation finished
+ReportGenerationUtil_confirmOverwriteMsg=File [{0}] already exists.\nPress \"OK\" to overwrite the existing file.
 
 RevenueByYearDialog_details=Details
 RevenueByYearDialog_title=Revenue by year
