income statement report

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -20,12 +20,9 @@ AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
 CashFlowDataSource_cashFlow=Cash Flow
 CashFlowDataSource_expenses=Expenses
 CashFlowDataSource_gross=Gross: 
-CashFlowDataSource_grossProfit=Gross profit:
 CashFlowDataSource_inputTax=Input tax:
 CashFlowDataSource_net=Net:
-CashFlowDataSource_operatingExpenses=Operating costs
 CashFlowDataSource_outputTax=Output tax:
-CashFlowDataSource_revenue=Revenue
 CashFlowDataSource_tax=Tax:
 CashFlowDataSource_taxSum=Sum:
 CashFlowDataSource_totalExpenses=Total costs
@@ -34,6 +31,8 @@ CashFlowDataSource_vatSum=Result
 
 ExpensesDataSource_expensesTitle=Expenses
 ExpensesDataSource_expenseCategory=Category
+
+IncomeStatement_title=Income Statement
 
 InvoiceDataSource_invoiceDateTitle=Invoice date:
 InvoiceDataSource_invoiceNumberTitle=Invoice no:
@@ -65,10 +64,15 @@ dateTitle=Date
 descriptionTitle=Description
 fromTitle=From:
 grossPriceTitle=Amount (gross)
+grossProfitTitle=Gross Profit
+grossTitle=Gross
 netPriceTitle=Amount (net)
+netTitle=Net
+revenueTitle=Revenue
 sumTitle=Total:
 taxAmountTitle=VAT amount
 taxRateTitle=VAT perc.
+taxTitle=VAT
 untilTitle=Until:
 
 TaxId=Tax ID: {0}
