--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -20,12 +20,9 @@ AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 CashFlowDataSource_cashFlow=Cash Flow
 CashFlowDataSource_expenses=Ausgaben
 CashFlowDataSource_gross=Brutto: 
-CashFlowDataSource_grossProfit=Bruttoergebnis:
 CashFlowDataSource_inputTax=Umsatzsteuer:
 CashFlowDataSource_net=Netto:
-CashFlowDataSource_operatingExpenses=Betriebskosten
 CashFlowDataSource_outputTax=Vorsteuer:
-CashFlowDataSource_revenue=Umsätze
 CashFlowDataSource_tax=Steuern:
 CashFlowDataSource_taxSum=Saldo:
 CashFlowDataSource_totalExpenses=Gesamtkosten
@@ -34,6 +31,8 @@ CashFlowDataSource_vatSum=Ergebnis
 
 ExpensesDataSource_expensesTitle=Ausgaben
 ExpensesDataSource_expenseCategory=Kategorie
+
+IncomeStatement_title=Abschlussbericht
 
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
 InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
@@ -65,10 +64,15 @@ dateTitle=Datum
 descriptionTitle=Beschreibung
 fromTitle=Von:
 grossPriceTitle=Betrag (brutto)
+grossProfitTitle=Bruttoergebnis
+grossTitle=Brutto
 netPriceTitle=Betrag (netto)
+netTitle=Netto
+revenueTitle=Umsatz
 sumTitle=Summe:
 taxAmountTitle=USt. Summe
 taxRateTitle=USt.
+taxTitle=USt.
 untilTitle=Bis:
 
 TaxId=Steuernr: {0}
