added expenses basic CSV import

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -81,6 +81,8 @@ labelRevenue=Revenue
 labelRevenueRelevant=Revenue-relevant
 labelScrapValue=Scrap Value
 labelSearch=Search
+labelSelectAll=Select all
+labelSelectNone=Select none
 labelStreet=Street:
 labelSubtotal=Sub total
 labelTaxes=Taxes
