--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -69,6 +69,8 @@ labelRevenue=Umsatz
 labelRevenueRelevant=Umsatzrelevant
 labelScrapValue=Restwert
 labelSearch=Suchen
+labelSelectAll=Alle ausw\u00E4hlen
+labelSelectNone=Keine ausw\u00E4hlen
 labelStreet=Strasse:
 labelSubtotal=Zwischensumme
 labelTaxes=Steuern
