added convenience stuff to import from CSV dialog

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -100,7 +100,8 @@ command.revenueByYear.name = Revenue by year...
 commandCategory.revenue.name = Revenue Command Category
 
 # COMMANDS - OTHER
-command.export.data.label = Export data to XML...
+command.export.label = Export...
+command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Reports...
