--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -96,7 +96,8 @@ command.revenue.name = Umsatz
 command.revenueByYear.name = Umsatz pro Jahr
 
 # COMMANDS - OTHER
-command.export.data.label = Daten nach XML exportieren...
+command.export.label = Export...
+command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Berichte...
