--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -30,6 +30,7 @@ iconsInvoiceSend=icons/page_go.png
 iconsUserEdit=icons/user_edit.png
 iconsRevenue=icons/money_add.png
 iconsExpenses=icons/money_delete.png
+iconsExpenseAdd=icons/tag_blue_add.png
 iconsExpenseEdit=icons/tag_blue_edit.png
 iconsReports=icons/report.png
 iconsCashFlowStatement=icons/report_user.png
@@ -45,6 +46,7 @@ labelBankCode=Bank code / ID:
 labelBankName=Bank Name:
 labelBasicInformation=Basic Information:
 labelBIC=BIC:
+labelBrowse=Browse...
 labelCategory=Category
 labelCity=City:
 labelClient=Client
@@ -199,6 +201,13 @@ FindInvoiceCommand_inputMessage=Enter the invoice number to search for
 FindInvoiceCommand_inputTitle=Find Invoice
 FindInvoiceCommand_noresultMessage=Invoice with number [{0}] wasn't found!
 FindInvoiceCommand_noresultTitle=Not found
+
+ImportExpensesWizard_errorFileNotValid=File does not exist or is a directory!
+ImportExpensesWizard_fileDialogTitle=Select CSV file to import
+ImportExpensesWizard_message=Import expenses from a comma-separated value (CSV) file
+ImportExpensesWizard_sourceFile=Source File:
+ImportExpensesWizard_summary={0} of {1} selected
+ImportExpensesWizard_title=Import Expenses
 
 ImportFromXmlWizard_dataFileLabel=Data file:
 ImportFromXmlWizard_errorDataFileExists=Cannot choose an existing file for your data\!
