--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -34,6 +34,7 @@ labelBankName=Bank:
 labelBasicInformation=Grundinformationen:
 labelCategory=Kategorie
 labelBIC=BIC:
+labelBrowse=Durchsuchen...
 labelCity=Stadt:
 labelClient=Kunde
 labelClientDetails=Kundendetails
@@ -187,6 +188,13 @@ FindInvoiceCommand_inputMessage=Rechnungsnummer für Suche eingeben:
 FindInvoiceCommand_inputTitle=Rechnung suchen
 FindInvoiceCommand_noresultMessage=Rechnung [{0}] konnte nicht gefunden werden!
 FindInvoiceCommand_noresultTitle=Nicht gefunden
+
+ImportExpensesWizard_errorFileNotValid=Datei existiert nicht oder ist ein Ordner
+ImportExpensesWizard_fileDialogTitle=Zu importierende Datei ausw\u00E4hlen
+ImportExpensesWizard_message=Ausgaben aus CSV Datei importieren
+ImportExpensesWizard_sourceFile=Quelldatei:
+ImportExpensesWizard_summary={0} von {1} ausgew\u00E4hlt
+ImportExpensesWizard_title=Ausgaben Importieren
 
 ImportFromXmlWizard_dataFileLabel=Speicherdatei:
 ImportFromXmlWizard_errorDataFileExists=Speicherdatei existiert bereits, bitte neue w\u00E4hlen.
