moved exporting model to proper export wizard

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -47,6 +47,8 @@ view.expenses = Expenses
 new.client.wizard.label = New Client
 new.invoice.wizard.label = New Invoice
 new.expense.wizard.label = New Expense
+import.expenses.wizard = Import Expenses
+export.model.wizard = Export Data
 
 # COMMANDS - COMMON
 command.save.label = Save
