--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -47,6 +47,8 @@ view.expenses = Ausgaben
 new.client.wizard.label = Neuer Kunde
 new.invoice.wizard.label = Neue Rechnung
 new.expense.wizard.label = Neue Ausgabe
+import.expenses.wizard = Ausgaben importieren
+export.model.wizard = Daten exportieren
 
 # COMMANDS - COMMON
 command.save.label = Speichern
