--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -98,7 +98,7 @@ labelYes=Ja
 labelNo=Nein
 
 labelError=Fehler!
-labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.
+labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.\nGrund: {0}
 
 ###############################################################################
 # View / Wizard / Editor specific resources
@@ -132,7 +132,7 @@ CashFlowDialog_sum=Saldo
 CashFlowDialog_title=Cash Flow
 CashFlowDialog_totalExpenses=Gesamtkosten
 
-ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum für Ausgaben, die angezeigt werden sollen
+ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum f\u00FCr Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
 
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
@@ -181,10 +181,14 @@ ExportInvoiceCommand_fillingReport=F\u00FClle Report
 ExportInvoiceCommand_loadingTemplate=Lade template
 ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
 
-ExportModelToXmlHandler_exportSuccessfull_title=Export abgeschlossen
-ExportModelToXmlHandler_exportSuccessfull_text=Export nach Datei [{0}] war erfolgreich.
+ExportModelToXmlWizard_fileDialogTitle = Zieldatei f\u00FCr Export w\u00E4hlen
+ExportModelToXmlWizard_title = Daten nach XML Exportieren
+ExportModelToXmlWizard_message = Exportieren Sie alle Daten in eine XML Datei.
+ExportModelToXmlWizard_progressMessage = Exportiere...
+ExportModelToXmlWizard_targetFile = Zieldatei:
+ExportModelToXmlWizard_warningTargetFileExists = Zieldatei existiert bereits und wird \u00FCberschrieben!
 
-FindInvoiceCommand_inputMessage=Rechnungsnummer für Suche eingeben:
+FindInvoiceCommand_inputMessage=Rechnungsnummer f\u00FCr Suche eingeben:
 FindInvoiceCommand_inputTitle=Rechnung suchen
 FindInvoiceCommand_noresultMessage=Rechnung [{0}] konnte nicht gefunden werden!
 FindInvoiceCommand_noresultTitle=Nicht gefunden
