--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -111,7 +111,7 @@ labelYes=Yes
 labelNo=No
 
 labelError=Error!
-labelUnknownError=Unknown Error. Please check the logfiles.
+labelUnknownError=Unknown Error. Please check the logfiles.\nCause: {0}
 
 ###############################################################################
 # View / Wizard / Editor specific resources
@@ -194,8 +194,12 @@ ExportInvoiceCommand_fillingReport=Filling report
 ExportInvoiceCommand_loadingTemplate=Loading template
 ExportInvoiceCommand_startingReportGeneration=Starting report generation
 
-ExportModelToXmlHandler_exportSuccessfull_title=Export finished
-ExportModelToXmlHandler_exportSuccessfull_text=Export to file [{0}] was successful. 
+ExportModelToXmlWizard_fileDialogTitle = Choose target file for export
+ExportModelToXmlWizard_title = Export Data to XML
+ExportModelToXmlWizard_message = Export all your current data to an XML file
+ExportModelToXmlWizard_progressMessage = Exporting...
+ExportModelToXmlWizard_targetFile = Target File:
+ExportModelToXmlWizard_warningTargetFileExists = Target file already exists and will be overwritten!
 
 FindInvoiceCommand_inputMessage=Enter the invoice number to search for
 FindInvoiceCommand_inputTitle=Find Invoice
