refactored income statement dialogs

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -107,4 +107,5 @@ command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Reports...
-command.cashFlow.name = Cashflow
+command.reports.incomeStatement.name = Income Statement
+command.reports.incomeStatementDetails.name = Income Statement Details
