--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -103,4 +103,5 @@ command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Berichte...
-command.cashFlow.name = Cashflow
+command.reports.incomeStatement.name = GuV Übersicht
+command.reports.incomeStatementDetails.name = GuV Details
