--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -33,7 +33,8 @@ iconsExpenses=icons/money_delete.png
 iconsExpenseAdd=icons/tag_blue_add.png
 iconsExpenseEdit=icons/tag_blue_edit.png
 iconsReports=icons/report.png
-iconsCashFlowStatement=icons/report_user.png
+iconsIncomeStatement=icons/layout_content.png
+iconsIncomeStatementDetails=icons/report_user.png
 	
 ###############################################################################
 # Common labels
@@ -136,15 +137,6 @@ AddressWizardPage_title=Contact details
 CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
 CancelInvoiceCommand_confirmText=Confirm cancel
 
-CashFlowDialog_grossProfit=Gross Profit
-CashFlowDialog_inputTax=Input Tax
-CashFlowDialog_operatingExpenses=Operating expenses
-CashFlowDialog_outputTax=Output Tax
-CashFlowDialog_Result=Result
-CashFlowDialog_sum=Sum
-CashFlowDialog_title=Cash Flow
-CashFlowDialog_totalExpenses=Total Expenses
-
 ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
 ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
 
@@ -219,6 +211,17 @@ ImportFromXmlWizard_title=Import from XML
 ImportFromXmlWizard_message=Select the XML file to import and the new file location to store your data
 ImportFromXmlWizard_xmlFileLabel=File to import:
 ImportFromXmlWizard_xmlFileSelectText=Select XML File to import
+
+IncomeStatementDialog_grossProfit=Gross Profit
+IncomeStatementDialog_inputTax=Input Tax
+IncomeStatementDialog_operatingExpenses=Operating expenses
+IncomeStatementDialog_outputTax=Output Tax
+IncomeStatementDialog_Result=Result
+IncomeStatementDialog_sum=Sum
+IncomeStatementDialog_title=Income Statement
+IncomeStatementDialog_totalExpenses=Total Expenses
+
+IncomeStatementDetailsDialog_title=Detailed Income Statement
 
 InvoiceEditor_details=Invoice Positions
 InvoiceEditor_header=Edit invoice
