--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -123,15 +123,6 @@ AddressWizardPage_title=Kontaktinformationen
 CancelInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] stornieren wollen?
 CancelInvoiceCommand_confirmText=Rechnung stornieren?
 
-CashFlowDialog_grossProfit=Bruttoergebnis
-CashFlowDialog_inputTax=Vorsteuer
-CashFlowDialog_operatingExpenses=Betriebskosten
-CashFlowDialog_outputTax=Umsatzsteuer
-CashFlowDialog_Result=Ergebnis
-CashFlowDialog_sum=Saldo
-CashFlowDialog_title=Cash Flow
-CashFlowDialog_totalExpenses=Gesamtkosten
-
 ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum f\u00FCr Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
 
@@ -206,6 +197,17 @@ ImportFromXmlWizard_title=Von XML importieren
 ImportFromXmlWizard_message=W\u00E4hlen Sie eine XML-Datei zum importieren und einen Dateinamen f\u00FCr ihre Speicherdatei aus.
 ImportFromXmlWizard_xmlFileLabel=Importieren von:
 ImportFromXmlWizard_xmlFileSelectText=XML Datei f\u00FCr Import w\u00E4hlen
+
+IncomeStatementDialog_grossProfit=Bruttoergebnis
+IncomeStatementDialog_inputTax=Vorsteuer
+IncomeStatementDialog_operatingExpenses=Betriebskosten
+IncomeStatementDialog_outputTax=Umsatzsteuer
+IncomeStatementDialog_Result=Ergebnis
+IncomeStatementDialog_sum=Saldo
+IncomeStatementDialog_title=GuV Übersicht
+IncomeStatementDialog_totalExpenses=Gesamtkosten
+
+IncomeStatementDetailsDialog_title=GuV Detailliert
 
 InvoiceEditor_details=Rechnungspositionen
 InvoiceEditor_header=Rechnung bearbeiten
