refactored cashflow statement into income statement summary

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -17,15 +17,11 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
 
-CashFlowDataSource_cashFlow=Cash Flow
-CashFlowDataSource_expenses=Expenses
-CashFlowDataSource_gross=Gross: 
-CashFlowDataSource_inputTax=Input tax:
-CashFlowDataSource_net=Net:
-CashFlowDataSource_outputTax=Output tax:
-CashFlowDataSource_tax=Tax:
+
+IncomeStatement_inputTax=Input tax:
+IncomeStatement_outputTax=Output tax:
 CashFlowDataSource_taxSum=Sum:
-CashFlowDataSource_totalExpenses=Total costs
+IncomeStatement_totalExpenses=Total costs
 CashFlowDataSource_vat=VAT
 CashFlowDataSource_vatSum=Result
 
@@ -33,6 +29,17 @@ ExpensesDataSource_expensesTitle=Expenses
 ExpensesDataSource_expenseCategory=Category
 
 IncomeStatement_title=Income Statement
+IncomeStatementSummary_title=Income Statement Summary
+IncomeStatement_expenses=Expenses
+IncomeStatement_gross=Gross: 
+IncomeStatement_inputTax=Input tax:
+IncomeStatement_net=Net:
+IncomeStatement_outputTax=Output tax:
+IncomeStatement_tax=Tax:
+IncomeStatement_taxSum=Sum:
+IncomeStatement_totalExpenses=Total Expenses
+IncomeStatement_vat=VAT
+IncomeStatement_vatSum=Result
 
 InvoiceDataSource_invoiceDateTitle=Invoice date:
 InvoiceDataSource_invoiceNumberTitle=Invoice no:
@@ -64,7 +71,7 @@ dateTitle=Date
 descriptionTitle=Description
 fromTitle=From:
 grossPriceTitle=Amount (gross)
-grossProfitTitle=Gross Profit
+operatingProfitTitle=Operating Profit
 grossTitle=Gross
 netPriceTitle=Amount (net)
 netTitle=Net
