--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -17,22 +17,21 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefund
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 
-CashFlowDataSource_cashFlow=Cash Flow
-CashFlowDataSource_expenses=Ausgaben
-CashFlowDataSource_gross=Brutto: 
-CashFlowDataSource_inputTax=Umsatzsteuer:
-CashFlowDataSource_net=Netto:
-CashFlowDataSource_outputTax=Vorsteuer:
-CashFlowDataSource_tax=Steuern:
-CashFlowDataSource_taxSum=Saldo:
-CashFlowDataSource_totalExpenses=Gesamtkosten
-CashFlowDataSource_vat=Umsatzsteuer
-CashFlowDataSource_vatSum=Ergebnis
-
 ExpensesDataSource_expensesTitle=Ausgaben
 ExpensesDataSource_expenseCategory=Kategorie
 
 IncomeStatement_title=Abschlussbericht
+IncomeStatementSummary_title=GuV \u00DCbersicht
+IncomeStatement_expenses=Ausgaben
+IncomeStatement_inputTax=Umsatzsteuer:
+IncomeStatement_outputTax=Vorsteuer:
+IncomeStatement_totalExpenses=Gesamtkosten
+IncomeStatement_gross=Brutto: 
+IncomeStatement_net=Netto:
+IncomeStatement_tax=Steuern:
+IncomeStatement_taxSum=Saldo:
+IncomeStatement_vat=Umsatzsteuer
+IncomeStatement_vatSum=Ergebnis
 
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
 InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
@@ -64,7 +63,7 @@ dateTitle=Datum
 descriptionTitle=Beschreibung
 fromTitle=Von:
 grossPriceTitle=Betrag (brutto)
-grossProfitTitle=Bruttoergebnis
+operatingProfitTitle=Betriebsgewinn
 grossTitle=Brutto
 netPriceTitle=Betrag (netto)
 netTitle=Netto
