--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -204,7 +204,7 @@ IncomeStatementDialog_operatingExpenses=Betriebskosten
 IncomeStatementDialog_outputTax=Umsatzsteuer
 IncomeStatementDialog_Result=Ergebnis
 IncomeStatementDialog_sum=Saldo
-IncomeStatementDialog_title=GuV Übersicht
+IncomeStatementDialog_title=GuV \u00DCbersicht
 IncomeStatementDialog_totalExpenses=Gesamtkosten
 
 IncomeStatementDetailsDialog_title=GuV Detailliert
