added language switcher

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -53,6 +53,7 @@ export.model.wizard = Export Data
 # COMMANDS - COMMON
 command.save.label = Save
 command.exit.label = Exit
+command.switch.language = Language...
 
 # COMMANDS - USER
 command.editUser.label = Edit user
