--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -53,6 +53,7 @@ export.model.wizard = Daten exportieren
 # COMMANDS - COMMON
 command.save.label = Speichern
 command.exit.label = Schliessen
+command.switch.language = Sprache...
 
 # COMMANDS - USER
 command.editUser.label = Benutzer bearbeiten
