--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -236,6 +236,17 @@ InvoiceView_number=No.
 InvoiceView_state=State
 InvoiceView_dueDate=Due date
 
+LanguageSelectionHandler_Language=Language:
+LanguageSelectionHandler_Title=Change Language...
+LanguageSelectionHandler_Message=Select your preferred language and region from the list of supported ones.
+LanguageSelectionHandler_RestartTitle=Restart Required
+LanguageSelectionHandler_RestartMessage=A restart is required for these changes to take effect. Make sure you have saved all your work before restarting.
+LanguageSelectionHandler_RestartNow=Restart Now
+LanguageSelectionHandler_RestartLater=Restart Later
+LanguageSelectionHandler_ErrorTitle=Error changing Locale
+LanguageSelectionHandler_ErrorReading=Cannot change language - the configuration could not be read.
+LanguageSelectionHandler_ErrorWriting=Cannot change language - the configuration could not be written.
+
 MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Payment date cannot be before the invoice's sent date
 MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Payment date cannot be in the future\!
 MarkInvoiceAsPaidCommand_message=Select the payment date for the invoice
