--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -222,6 +222,17 @@ InvoiceView_number=Nr.
 InvoiceView_state=Status
 InvoiceView_dueDate=Zahlungsziel
 
+LanguageSelectionHandler_Language=Sprache:
+LanguageSelectionHandler_Title=Sprache \u00C4ndern
+LanguageSelectionHandler_Message=W\u00E4hlen Sie Ihe Sprache und Region aus
+LanguageSelectionHandler_RestartTitle=Neustart erforderlich
+LanguageSelectionHandler_RestartMessage=Ein Neustart der Anwendung ist notwendig, damit die \u00E4nderungen wirksam werden. Bitte speichern Sie vorher Ihre Arbeit. 
+LanguageSelectionHandler_RestartNow=Jetzt neu starten
+LanguageSelectionHandler_RestartLater=Sp\u00E4ter neu starten
+LanguageSelectionHandler_ErrorTitle=Fehler beim Sprachwechsel
+LanguageSelectionHandler_ErrorReading=Sprache kann nicht ge\u00E4ndert werden - Konfiguration konnte nicht gelesen werden
+LanguageSelectionHandler_ErrorWriting=Sprache kann nicht ge\u00E4ndert werden - Konfiguration konnte nicht geschrieben werden
+
 MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Zahlungsdatum kann nicht vor dem Sendedatum liegen
 MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Zahlungsdatum kann nicht in der Zukunft liegen
 MarkInvoiceAsPaidCommand_message=W\u00E4hlen Sie das Zahlungsdatum f\u00FCr die Rechnung
