file name suggestions in report exporting now i18n and dynamically including timeframe

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -220,8 +220,10 @@ IncomeStatementDialog_Result=Result
 IncomeStatementDialog_sum=Sum
 IncomeStatementDialog_title=Income Statement
 IncomeStatementDialog_totalExpenses=Total Expenses
+IncomeStatementDialog_fileNameSuggestion=IncomeStatementSummary
 
 IncomeStatementDetailsDialog_title=Detailed Income Statement
+IncomeStatementDetailsDialog_fileNameSuggestion=Abschlussbericht
 
 InvoiceEditor_details=Invoice Positions
 InvoiceEditor_header=Edit invoice
