--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -206,8 +206,10 @@ IncomeStatementDialog_Result=Ergebnis
 IncomeStatementDialog_sum=Saldo
 IncomeStatementDialog_title=GuV \u00DCbersicht
 IncomeStatementDialog_totalExpenses=Gesamtkosten
+IncomeStatementDialog_fileNameSuggestion=GuV
 
 IncomeStatementDetailsDialog_title=GuV Detailliert
+IncomeStatementDetailsDialog_fileNameSuggestion=Abschlussbericht
 
 InvoiceEditor_details=Rechnungspositionen
 InvoiceEditor_header=Rechnung bearbeiten
