fixed straightline depreciation added immediate write-off added depreciation method factory

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -85,6 +85,7 @@ ExpenseType_OTHER=Other Expenses
 # Depreciation Methods
 ###############################################################################
 DepreciationMethod_STRAIGHTLINE=Straight-line
+DepreciationMethod_FULL=Immediate Write-Off
 
 ###############################################################################
 # Time Frame Types
