--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -93,6 +93,7 @@ ExpenseType_OTHER=Sonstige Ausgaben
 # Depreciation Methods
 ###############################################################################
 DepreciationMethod_STRAIGHTLINE=Linear
+DepreciationMethod_FULL=Sofortabschreibung
 
 ###############################################################################
 # Time Frame Types
