refined event handling for combo boxes - now distinguishing between pre- and post selection events

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -177,6 +177,10 @@ EditInvoiceCommand_uneditableMessage=This invoice cannot be edited anymore
 EditInvoiceCommand_uneditableText=Uneditable
 
 ExpenseEditor_title=Edit Expense
+ExpenseEditor_Depreciation=Depreciation
+ExpenseEditor_DepreciationSchedule=Depreciation Schedule
+ExpenseEditor_BeginningBookValue=Book Value
+ExpenseEditor_EndBookValue=End of Year Value
 
 ExpensesView_title=Expenses ({0})
 
