--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -163,6 +163,10 @@ EditInvoiceCommand_uneditableMessage=Diese Rechnung kann nicht mehr editiert wer
 EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
 
 ExpenseEditor_title=Ausgabe bearbeiten
+ExpenseEditor_Depreciation=Abschreibung
+ExpenseEditor_DepreciationSchedule=Abschreibungsplan
+ExpenseEditor_BeginningBookValue=Ausgangswert
+ExpenseEditor_EndBookValue=Buchwert
 
 ExpensesView_title=Ausgaben ({0})
 
