added depreciation schedule to Expense model object

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -178,6 +178,8 @@ EditInvoiceCommand_uneditableText=Uneditable
 
 ExpenseEditor_title=Edit Expense
 ExpenseEditor_Depreciation=Depreciation
+ExpenseEditor_DepreciationCalculatedTitle=Unsaved Depreciation
+ExpenseEditor_DepreciationCalculatedMessage=A depreciation schedule was calculated for this expense.\n\nSave the expense to make this permanent
 ExpenseEditor_DepreciationSchedule=Depreciation Schedule
 ExpenseEditor_BeginningBookValue=Book Value
 ExpenseEditor_EndBookValue=End of Year Value
