--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -164,6 +164,8 @@ EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
 
 ExpenseEditor_title=Ausgabe bearbeiten
 ExpenseEditor_Depreciation=Abschreibung
+ExpenseEditor_DepreciationCalculatedTitle=Ungespeicherter Abschreibungsplan
+ExpenseEditor_DepreciationCalculatedMessage=Ein Abschreibungsplan für diese Ausgabe wurde errechnet, aber noch nicht gespeichert.
 ExpenseEditor_DepreciationSchedule=Abschreibungsplan
 ExpenseEditor_BeginningBookValue=Ausgangswert
 ExpenseEditor_EndBookValue=Buchwert
