added preference pages

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -110,3 +110,7 @@ command.import.label = Import...
 command.reports.name = Reports...
 command.reports.incomeStatement.name = Income Statement
 command.reports.incomeStatementDetails.name = Income Statement Details
+
+# PREFERENCES
+preferences.accounting=Accounting
+preferences.reporting=Reporting
