--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -106,3 +106,7 @@ command.import.label = Import...
 command.reports.name = Berichte...
 command.reports.incomeStatement.name = GuV Übersicht
 command.reports.incomeStatementDetails.name = GuV Details
+
+# PREFERENCES
+preferences.accounting=Accounting
+preferences.reporting=Reporting
