added dedicated preferences util changed startup reading and storing of context

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -131,6 +131,9 @@ AccountingSplashHandler_welcomeDialogCreateNew=Create new data (default).
 AccountingSplashHandler_welcomeDialogUseExisting=Use an existing data file.
 AccountingSplashHandler_welcomeDialogImportXml=Import data from XML.
 
+AccountingUI_errorContextReInit=Context already stored in DB! Re-Init of context is not permitted!
+AccountingUI_errorContextInfoIncomplete=Cannot build context, both user and DB file location must be supplied! User : {0}, DB File: {1}
+
 AddressWizardPage_desc=Enter contact details.\nThese can also be edited later
 AddressWizardPage_title=Contact details
 
