--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -117,6 +117,9 @@ AccountingSplashHandler_welcomeDialogCreateNew=Neue Daten anlegen (standard)
 AccountingSplashHandler_welcomeDialogUseExisting=Eine existierende Speicherdatei verwenden.
 AccountingSplashHandler_welcomeDialogImportXml=Daten aus XML-Datei importieren.
 
+AccountingUI_errorContextReInit=Kontext bereits gespeichert, Re-Initialisierung nicht erlaubt!
+AccountingUI_errorContextInfoIncomplete=Kontext konnte nicht erstellt werden, sowohl Nutzer ({0}) als auch DB Date ({1}) m\u00FCssen angegeben werden!
+
 AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
 
