--- a/accounting-ui/src/de/togginho/accounting/ui/prefs/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/prefs/messages.properties
@@ -19,5 +19,7 @@ AccountingPrefs_Explanation=Both the user name and location of the database file
 AccountingPrefs_UserName=User:
 AccountingPrefs_DBfile=Database location:
 
+Preferences_ErrorUnavailable=The preferences cannot be retrieved
+
 ReportingPrefs_DefaultExportDir=Default export directory:
 ReportingPrefs_OpenAfterExport=Open Document after report generation:
