--- a/accounting-ui/src/de/togginho/accounting/ui/prefs/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/prefs/messages_de.properties
@@ -27,5 +27,7 @@ AccountingPrefs_Explanation=Weder Benutzername noch der Speicherort der Datenban
 AccountingPrefs_UserName=Benutzer:
 AccountingPrefs_DBfile=Datenbank-Datei:
 
+Preferences_ErrorUnavailable=Einstellungen konnten nicht geladen werden!
+
 ReportingPrefs_DefaultExportDir=Standard Exportverzeichnis:
 ReportingPrefs_OpenAfterExport=Dokument nach Export \u00F6ffnen:
