added new context-sensitive edit menu

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -26,6 +26,9 @@ menu.file.new.client.label = Client
 menu.file.new.invoice.label = Invoice
 menu.file.new.expense.label = Expense
 menu.file.new.other.label = Other...
+menu.edit.label = Edit
+menu.edit.mnemonic = E
+menu.edit.preferences.label = Preferences
 menu.window.label = Window
 menu.window.mnemonic = W
 menu.help.label = Help
