--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -26,6 +26,9 @@ menu.file.new.client.label = Kunde
 menu.file.new.invoice.label = Rechnung
 menu.file.new.expense.label = Ausgabe
 menu.file.new.other.label = Sonstige...
+menu.edit.label = Bearbeiten
+menu.edit.mnemonic = e
+menu.edit.preferences.label = Einstellungen
 menu.window.label = Ansicht
 menu.window.mnemonic = A
 menu.help.label = Hilfe
