finished new handling of export including re-using default values

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -146,6 +146,12 @@ ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
 
+ChooseExportTargetDialog_labelPdfFiles=PDF files
+ChooseExportTargetDialog_message=Choose the path and filename of the report to generate, and whether to open it in an external program afterwards
+ChooseExportTargetDialog_openAfterExport=Open file after exporting
+ChooseExportTargetDialog_targetFile=Export to file:
+ChooseExportTargetDialog_title=Export...
+
 ChooseReportCommand_message=Select the report to display
 ChooseReportCommand_title=Report selection
 	
@@ -288,7 +294,6 @@ NewTaxRateWizard_windowTitle=New Tax Rate
 
 ReportGenerationUtil_errorGeneratingInvoice=Error generating PDF for invoice!
 ReportGenerationUtil_errorNoReportingService=Reporting service not found, please check your installation!
-ReportGenerationUtil_labelPdfFiles=PDF files
 ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generation finished
 ReportGenerationUtil_confirmOverwriteMsg=File [{0}] already exists.\nPress \"OK\" to overwrite the existing file.
