--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -132,6 +132,12 @@ ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
 
+ChooseExportTargetDialog_labelPdfFiles=PDF Dateien
+ChooseExportTargetDialog_message=W\u00E4hlen Sie die Zieldatei f\u00FCr den Export, und ob diese danach in einem externen Programm ge\u00F6ffnet werden soll
+ChooseExportTargetDialog_openAfterExport=Datei nach Export \u00F6ffnen
+ChooseExportTargetDialog_targetFile=Export nach Datei:
+ChooseExportTargetDialog_title=Export...
+
 ChooseReportCommand_message=W\u00E4hlen Sie den anzuzeigenden Report
 ChooseReportCommand_title=Report w\u00E4hlen
 
@@ -168,7 +174,7 @@ EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
 ExpenseEditor_title=Ausgabe bearbeiten
 ExpenseEditor_Depreciation=Abschreibung
 ExpenseEditor_DepreciationCalculatedTitle=Ungespeicherter Abschreibungsplan
-ExpenseEditor_DepreciationCalculatedMessage=Ein Abschreibungsplan für diese Ausgabe wurde errechnet, aber noch nicht gespeichert.
+ExpenseEditor_DepreciationCalculatedMessage=Ein Abschreibungsplan f\u00FCr diese Ausgabe wurde errechnet, aber noch nicht gespeichert.
 ExpenseEditor_DepreciationSchedule=Abschreibungsplan
 ExpenseEditor_BeginningBookValue=Ausgangswert
 ExpenseEditor_EndBookValue=Buchwert
@@ -253,7 +259,7 @@ MarkInvoiceAsPaidCommand_title=Rechnung als bezahlt markieren
 MultiEditExpensesHandler_title=Mehrere Ausgaben bearbeiten
 MultiEditExpensesHandler_message=\u00C4nderungen auf ausgew\u00E4hlte Ausgaben anwenden und speichern.
 MultiEditExpensesHandler_apply=Auswahl
-MultiEditExpensesHandler_errorNoChanges=Sie haben keine \u00C4nderungen gemacht, die gespeichert werden können.
+MultiEditExpensesHandler_errorNoChanges=Sie haben keine \u00C4nderungen gemacht, die gespeichert werden k\u00F6nnen.
 MultiEditExpensesHandler_errorNoExpensesSelected=Mindestens eine Ausgabe muss gew\u00E4hlt werden, auf die \u00C4nderungen angewand werden soll.
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
@@ -274,7 +280,6 @@ NewTaxRateWizard_windowTitle=Neuer Steuersatz
 
 ReportGenerationUtil_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
 ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
-ReportGenerationUtil_labelPdfFiles=PDF Dateien
 ReportGenerationUtil_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generierung erfolgreich
 ReportGenerationUtil_confirmOverwriteMsg=Datei [{0}] existiert bereits.\nDr\u00FCcken Sie \"OK\" um sie zu \u00FCberschreiben.
